tests/NormalTests/paczka1/fuzzy1/10928264.err
Error in line 5: XTdK0E S546 52,8
Error in line 9: 51r58wkBHc S546 27,1
Error in line 16: B3cZteKD S765 14,8
Error in line 21: B3cZteKD S332 19,7
Error in line 18: 9bBfoW4kY S546 61,4
Error in line 28: 51r58wkBHc S332 40,3
Error in line 31: 9bBfoW4kY S332 78,4
Error in line 34: 51r58wkBHc A161 46,8
